# ct-analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
clickhouse/config.d/: system-log-retention.xml
src/ct_analyzer/: __main__.py  config.py  main.py  mcp_server.py  security.py
src/ct_analyzer/analysis/: __init__.py  anomalies.py  baseline.py  lint.py  scoring.py  zlint.py
src/ct_analyzer/api/: __init__.py  routes.py  server.py  ui.py
src/ct_analyzer/cert/: __init__.py  domains.py  fingerprint.py  parse.py  x509_features.py
src/ct_analyzer/cli/: __init__.py  app.py
src/ct_analyzer/db/: __init__.py  clickhouse.py  migrations.py  rollups.py  schema.sql
src/ct_analyzer/ingest/: __init__.py  certstream.py  pipeline.py
src/ct_analyzer/ui/: app.js  index.html  login.html  styles.css
tests/: test_anomalies.py  test_dashboard_snapshot.py  test_domains.py  test_entropy.py  test_hashing.py  test_issuer_matching.py  test_lint.py  test_org_checks.py  test_validation_type.py  test_zlint.py
tests/fixtures/: good_rsa.pem  odd_ecdsa.pem  weak_rsa.pem
